--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <div class="ome">
 
 
-    <h1> O mě</h1>
+    <h1> O mně</h1>
 
     <b>
     <a>Jsem normální 14 letý kluk, kterého baví programovat, hrát videohry a cvičit </a>
